--- a/src/Components/Nav.css
+++ b/src/Components/Nav.css
@@ -2,6 +2,9 @@
   z-index: 2;
   padding: 0.25rem;
   display: flex;
+  position: absolute;
+  top: 0;
+  overflow: hidden;
   align-items: center;
   justify-content: space-between;
   height: 10vh;
