--- a/src/Components/LogoutHome.css
+++ b/src/Components/LogoutHome.css
@@ -1,13 +1,10 @@
 .lougout-screen {
-  height: 100vh;
-  overflow: hidden;
+  position: relative;
+  height: 120vh;
 }
 
 .logout-container {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  height: 80vh;
+  width: 100%;
+  padding-top: 10vh;
 }
-
