--- a/src/Components/StudentHomeBody.css
+++ b/src/Components/StudentHomeBody.css
@@ -1,18 +1,10 @@
-.quizzes-body {
-  min-height: 100vh;
+.quizzes-container {
   width: 100%;
+  height: 100%;
+  padding-left: 5%;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  align-items: flex-start;
+  align-items: center;
   background-color: rgb(0, 0, 0);
-}
-
-.quizzes-container {
-  width: 100%;
-  height: 50vh;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  margin-left: 2%;
 }
