Finish exam except showing score at end

--- a/src/Components/Quizzes.css
+++ b/src/Components/Quizzes.css
@@ -1,4 +1,4 @@
-.available-quizzes {
+.quizzes {
   height: 25%;
   width: 90%;
   overflow: auto;
@@ -6,18 +6,18 @@
   font-size: 0;
 }
 
-.available-quizzes::-webkit-scrollbar {
+.quizzes::-webkit-scrollbar {
   max-width: 0.35rem;
   height: 0.4rem;
 }
 
-.available-quizzes::-webkit-scrollbar-thumb {
+.quizzes::-webkit-scrollbar-thumb {
   max-width: 0.35rem;
   background: white;
   border-radius: 5px;
 }
 
-.available-quizzes-header {
+.quizzes-header {
   width: 100%;
   color: white;
   font-size: 2rem;
