--- a/src/Components/Score.css
+++ b/src/Components/Score.css
@@ -1,60 +1,33 @@
-.exam-screen {
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  background-color: rgb(var(--first-color));
-}
-
-.exam-container {
-  width: 50%;
-  height: 50%;
-  background-color: white;
+.score-container {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  box-shadow: 0 0 15px rgb(var(--fourth-color));
-  padding: 0.25rem;
-  border-radius: 1.5rem;
-}
-
-.exam-container.congrats {
-  animation: congrats 2s infinite;
-}
-
-@keyframes congrats {
-  0% {
-    box-shadow: 0 0 15px rgb(var(--fourth-color));
-  }
-  50% {
-    box-shadow: 0 0 30px rgb(var(--fourth-color));
-  }
-  100% {
-    box-shadow: 0 0 15px rgb(var(--fourth-color));
-  }
-}
-
-.start-btn-container {
   height: 100%;
   width: 100%;
-  display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
+  font-size: 2rem;
 }
 
-.next-btn-container {
+.crown-container,
+.score-value-container,
+.btn-container {
+  height: 33%;
   width: 100%;
-  height: 10%;
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: 0.5s;
 }
 
-.next-btn,
-.start-btn {
+.crown-container .crown {
+  scale: 4;
+  color: rgb(var(--first-color));
+}
+
+.score span {
+  font-weight: bold;
+}
+
+.btn {
   position: relative;
   display: inline-block;
   padding: 10px 20px;
@@ -72,8 +45,7 @@
   border-radius: 5px;
 }
 
-.next-btn:hover,
-.start-btn:hover {
+.btn:hover {
   background-color: rgb(var(--third-color));
   color: #000;
   box-shadow: 0 0 5px rgb(var(--fourth-color)),
@@ -81,14 +53,12 @@
     0 0 100px rgb(var(--fourth-color));
 }
 
-.next-btn span,
-.start-btn span {
+.btn span {
   display: block;
   position: absolute;
 }
 
-.next-btn span:nth-child(1),
-.start-btn span:nth-child(1) {
+.btn span:nth-child(1) {
   top: 0;
   left: -100%;
   width: 100%;
@@ -107,8 +77,7 @@
   }
 }
 
-.next-btn span:nth-child(2),
-.start-btn span:nth-child(2) {
+.btn span:nth-child(2) {
   top: -100%;
   right: 0;
   width: 2px;
@@ -128,8 +97,7 @@
   }
 }
 
-.next-btn span:nth-child(3),
-.start-btn span:nth-child(3) {
+.btn span:nth-child(3) {
   bottom: 0;
   right: -100%;
   width: 100%;
@@ -149,8 +117,7 @@
   }
 }
 
-.next-btn span:nth-child(4),
-.start-btn span:nth-child(4) {
+.btn span:nth-child(4) {
   bottom: -100%;
   left: 0;
   width: 2px;
