--- a/src/Components/StudentHomeBody.css
+++ b/src/Components/StudentHomeBody.css
@@ -4,7 +4,32 @@
   padding-left: 5%;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
   background-color: rgb(0, 0, 0);
+}
+
+.loading-container {
+  height: 100%;
+  width: 100%;
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.loading {
+  color: white;
+  scale: 4;
+  animation: loading 1s infinite;
+  transition: all 0.5s;
+}
+
+@keyframes loading {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
