--- a/src/Components/Quiz.css
+++ b/src/Components/Quiz.css
@@ -11,7 +11,6 @@
   padding: 1rem;
   font-size: 1rem;
   color: white;
-  cursor: pointer;
 }
 
 .quiz-instructor-name,
@@ -20,21 +19,56 @@
   color: white;
 }
 
-.quiz .quiz-info {
+.quiz-info {
   color: white;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
   height: 8rem;
+  width: 100%;
 }
 
-.quiz-info .quiz-question-count {
+.quiz-question-count,
+.delete-btn-container,
+.edit-btn-container {
   font-size: 0.8rem;
   font-weight: bold;
   border-radius: 1rem;
   background-color: white;
   color: black;
-  padding: 4px;
+  padding: 5px;
   text-align: center;
+}
+
+.quiz-edit-btns {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.delete-btn-container,
+.edit-btn-container {
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  width: fit-content;
+  cursor: pointer;
+}
+
+.delete-btn,
+.edit-btn {
+  cursor: pointer;
+  border: none;
+  outline: none;
+  background-color: transparent;
+  font-size: 1rem;
+  transition: all 0.5s;
+  margin-right: 3%;
+}
+
+.icon {
+  transition: all 0.5s;
+  font-size: 1rem;
 }
