--- a/src/Components/AddQuiz.css
+++ b/src/Components/AddQuiz.css
@@ -20,14 +20,6 @@
   border-radius: 1.5rem;
 }
 
-.input-fields {
-  height: 70%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
-}
-
 .confirm-btn-container {
   width: 100%;
   height: 20%;
@@ -144,4 +136,8 @@
   100% {
     bottom: 100%;
   }
+}
+
+.question-header {
+  font-size: 2rem;
 }
