--- a/src/Components/Nav.css
+++ b/src/Components/Nav.css
@@ -64,7 +64,7 @@
 }
 
 .post-nav {
-  width: 20%;
+  width: 40%;
   height: max-content;
   display: flex;
   justify-content: space-evenly;
@@ -81,13 +81,8 @@
   font-size: 1.5rem;
 }
 
-.post-nav ul li:nth-child(1) {
-  font-size: 1.6rem;
-  margin-top: 3%;
-}
-
-.post-nav ul li:nth-child(3) {
-  width: fit-content;
+.signup-link {
+  width: 20%;
   text-align: center;
   padding: 0.25rem;
   border-radius: 0.5rem;
@@ -99,23 +94,65 @@
   background-size: 200% 100%;
   background-position: right;
   transition: all 1s;
+  color: white;
+  text-decoration: none;
 }
 
-.post-nav ul li:nth-child(3):hover {
+.signup-link:hover,
+.add-quiz:hover {
   background-position: left;
   background-size: 300%;
-}
-
-.post-nav ul li:nth-child(3) .link {
-  color: white;
-}
-
-.post-nav ul li:nth-child(3):hover .link {
   color: black;
 }
 
-.post-nav ul li .link {
+.add-quiz:hover span,
+.add-quiz:hover .add-icon {
+  color: black;
+}
+
+.login-link {
   text-decoration: none;
   transition: all 1s;
   color: rgb(var(--first-color));
+}
+
+.post-nav .add-icon {
+  color: rgb(var(--first-color));
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  font-size: 1.2rem;
+  display: flex;
+  color: white;
+  transition: all 1s;
+}
+
+.add-quiz {
+  height: 100%;
+  width: 30%;
+  text-align: center;
+  padding: 0.25rem;
+  border-radius: 0.5rem;
+  background-image: linear-gradient(
+    to left,
+    rgb(var(--first-color)) 50%,
+    transparent 50%
+  );
+  background-size: 200% 100%;
+  background-position: right;
+  transition: all 1s;
+  cursor: pointer;
+}
+
+.add-quiz-link {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  text-decoration: none;
+}
+
+.add-quiz span {
+  color: white;
 }
