--- a/src/Components/Home body/BodyHome.css
+++ b/src/Components/Home body/BodyHome.css
@@ -1,7 +1,7 @@
 .body {
   height: 100%;
   width: 100%;
-  background-image: url("../Images/body.png");
+  background-image: url("../../Images/body.png");
   background-size: cover;
   background-repeat: no-repeat;
 }
